Fix CSS so videos top aligned in table cells

--- a/css/motionbrowser.css
+++ b/css/motionbrowser.css
@@ -62,3 +62,7 @@ img.plus{
     padding-left:  1ex;
     padding-right: 1ex ;
 }
+
+#idtable > tbody {
+    vertical-align: top ;
+}
